deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hailor-api-svc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: hailor-api
